fix: update font family for improved readability and consistency

--- a/public/properties/property.css
+++ b/public/properties/property.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 /* Content margin for the navbar */
 body {
-  font-family:'poppins', sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
